# monasca-notification

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  alarm.py  bindep.txt  commit_tracker.py  dependencies.txt  kafka_consumer.py  lower-constraints.txt  main.py  notification.py  notification.yaml  notification_exceptions.py  requirements.txt  setup.cfg  setup.py  state_tracker.py  test-requirements.txt  tox.ini
config-generator/: notification.conf
debian/: changelog  control  copyright
doc/: requirements.txt
docker/: Dockerfile  README.rst  build_image.sh  health_check.py  monasca-notification.conf.j2  notification-logging.conf.j2  notification.yaml.j2  start.sh
etc/monasca/: README-notification.conf.txt  notification-logging.conf
mon-notification/processors/: __init__.py  alarm_processor.py
mon_notification/: main.py  notification.py  notification_exceptions.py  state_tracker.py
mon_notification/processors/: __init__.py  alarm_processor.py  base.py  kafka_consumer.py  notification_processor.py  sent_notification_processor.py
monasca_notification/: config.py  main.py  notification.py  notification_engine.py  notification_exceptions.py  periodic_engine.py  retry_engine.py  state_tracker.py  version.py
monasca_notification/common/: utils.py
monasca_notification/common/repositories/: exceptions.py
monasca_notification/common/repositories/base/: base_repo.py
monasca_notification/common/repositories/orm/: models.py  (+1 more)
monasca_notification/conf/: __init__.py  cli.py  database.py  kafka.py  keystone.py  notifiers.py  processors.py  queues.py  retry.py  statsd.py  types.py  zookeeper.py
monasca_notification/plugins/: abstract_notifier.py  email_notifier.py  hipchat_notifier.py  jira_notifier.py  jiraformat.yml  pagerduty_notifier.py  slack_notifier.py  webhook_notifier.py
monasca_notification/processors/: __init__.py  alarm_processor.py  base.py  kafka_consumer.py  kafka_producer.py  notification_processor.py  sent_notification_processor.py
monasca_notification/types/: abstract_notifier.py  email_notifier.py  notifiers.py  pagerduty_notifier.py  webhook_notifier.py
notifications/: __init__.py  email.py
playbooks/: docker-publish.yml
processors/: alarm.py  kafka_consumer.py  notification.py  sent_notification.py
releasenotes/notes/: add_legacy_kafka_client_enabled_option-11fdacc063e95ae2.yaml  allow_periodic_notifications_for_all_notification_types-ce399a32e5d0f4d3.yaml  drop-py-2-7-285e126a13e4b5a7.yaml  drop-yaml-config-9eb8f5e68a40ba14.yaml  fix_periodic_notifications-d842bfb5ec665123.yaml  use-standard-config-file-path-f3da49d0d655377c.yaml
releasenotes/source/: conf.py  index.rst
test/: README.md  no-op.json  notify.json  sample_notifications.sql
tests/: base.py  test_alarm_processor.py  test_config.py  test_email_notification.py  test_hipchat_notification.py  test_jira_notification.py  test_mysql_repo.py  test_notification.py  test_notification_processor.py  test_notifiers.py  test_orm_repo.py  test_pagerduty_notification.py  test_slack_notification.py  test_state_tracker.py  test_utils.py  test_webhook_notification.py
tests/manual/: invalid.json  notify.json  sample_notifications.sql
tests/resources/: notification.yaml  test_jiraformat.yml  test_jiraformat_without_comments.yml  test_jiraformat_without_summary.yml  test_slackformat.template
tools/: mon_notification_offsets.py  monasca_notification_offsets.py  tox_install.sh
(+2 files in other folders)
