[metadata]
name = monasca-notification
author = Tim Kuhlman
author-email = tim.kuhlman@hp.com
summary = Reads alarms from Kafka and then notifies the customer using their configured notification method.
classifier=
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: Apache Software License
  Topic :: System :: Monitoring
keywords = openstack monitoring email
description-file = README.md
home-page = https://github.com/stackforge/monasca-notification
license = Apache

[entry_points]
console_scripts =
    monasca-notification = monasca_notification.main:main
oslo.config.opts =
    monasca_notification = monasca_notification.conf:list_opts

[files]
packages = monasca_notification

[flake8]
max-line-length = 120

[pbr]
autodoc_index_modules = True

[pep8]
max-line-length = 120

[wheel]
universal = 1

[extras]
jira_plugin =
  jira
  Jinja2!=2.9.0,!=2.9.1,!=2.9.2,!=2.9.3,!=2.9.4,>=2.8 # BSD License (3 clause)
