[metadata]
name = monasca-notification
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = Reads alarms from Kafka and then notifies the customer using their configured notification method.
classifier=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Monitoring
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords = openstack monitoring email
description-file = README.rst
home-page = https://github.com/openstack/monasca-notification
license = Apache

[entry_points]
console_scripts =
    monasca-notification = monasca_notification.main:main
oslo.config.opts =
    monasca_notification = monasca_notification.conf:list_opts

[files]
packages = monasca_notification

[flake8]
max-line-length = 120

[pbr]
autodoc_index_modules = True

[pep8]
max-line-length = 120

[wheel]
universal = 1

[extras]
jira_plugin =
  Jinja2>=2.10 # BSD License (3 clause)
